TimeAdministrator/cluster/timelogtype-svc/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: TipoLogTiempo-svc
  namespace: adtd
  labels:
    svc: TipoLogTiempo
spec:
  ports:
  - port: 5010
    protocol: TCP
  selector:
    svc: TipoLogTiempo
