TimeAdministrator/cluster/timelogtype-svc/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: TipoLogTiempo-api-ingress
  namespace: adtd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /v1/types
spec:
  tls:
    - hosts:
      - adtd.docugate.ch
      secretName: adtd-api-tls
  rules:
  - host: adtd.docugate.ch
    http:
      paths:
      - path: /v1/types
        backend:
          serviceName: TipoLogTiempo-svc
          servicePort: 5010
